Dark Mode Fixes (#126)
Dark Mode Fixes: Polished dark mode, organized CSS for light and dark themes using theme directory. Refactored dark mode to use html. Prioritizes preferred theme over saved theme settings. Added link tags for theme CSS files to home.php and ramadan_home.php

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
+@import url(./themes/dark.css);
+@import url(./themes/light.css);
 /* CSS Document */
 
 
@@ -79,7 +81,7 @@
     font-style: normal;
 }
 :root{
-	--global-text-color:#ffffff;
+	--global-text-color:none;
 	/* none */
 	--primary-text-color:#ffffff;
 	/* #000 */
@@ -132,8 +134,8 @@
 	/* #d6d6d6 */
 	--boh_hover_bg:#343A40;
 	/* #ffffff */
-	
-
+	--sticky-color: #90b8b9;
+	--link-color: #50a3a3;
 }
 
 *{
@@ -156,7 +158,7 @@ html,body{
 
 a {
 	text-decoration: none;
-	color: #5F9999;
+	color: var(--link-color);
 }
 
 a:hover {
@@ -1338,9 +1340,7 @@ input.searchquery{
 .hadith_permalink a:hover {
     text-decoration: underline;
 }
-.hadith_reference a {
-    color: #037d7d;
-}
+
 .hadith_reference {
     font-size: 11px;
     text-decoration: none;
@@ -1732,7 +1732,7 @@ input.searchquery{
 		border-radius: 6px;
 	}
 	.bttenabled {
-		background-color: #79aaab;
+		background-color: var(--sticky-color);
 		mix-blend-mode: unset;
 	}
 	.bttenabled:before {
@@ -1994,7 +1994,7 @@ input.searchquery{
 
 	.hadith_reference_sticky {
 		display: block;
-		background-color: #90b8b9;
+		background-color: var(--sticky-color);
 		color: white;
 		text-align: right;
 		padding: 5px 20px 7px;
@@ -2003,7 +2003,7 @@ input.searchquery{
 		top: 100px;
 		box-sizing: border-box;
 		z-index: 1;
-		border-top: 2px solid #75a7a8;
+		border-top: 2px solid var(--sticky-color);
 	}
 
     .collection_titles,
